--- a/task-03.html
+++ b/task-03.html
@@ -13,10 +13,34 @@
         color: #424242;
         line-height: 1.5;
       }
+
+      #gallery {
+        display: flex;
+        list-style: none;
+      }
+
+      .item {
+        width: 360px;
+        height: 240px;
+      }
+
+      .item:not(:first-child) {
+        margin-left: 30px;
+      }
+
+      .image {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     </style>
   </head>
   <body>
     <p><a href="index.html">На главную</a></p>
+
+    <ul id="gallery"></ul>
+
     <script src="js/task-03.js" type="module"></script>
   </body>
 </html>
